--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,17 @@
   </head>
 
   <body>
-
-    <%= render 'layouts/messages' %>
-    <% if user_signed_in? %>
-      <%= "Welcome Dr. #{current_user.full_name}!" %>
-    <% else %>
-      <%= link_to 'Sign Up', new_user_registration_path %>
-    <% end %>
+    <nav>
+      <ul>
+        <%= render 'layouts/messages' %>
+        <% if user_signed_in? %>
+          <%= "Welcome Dr. #{current_user.full_name}!" %>
+          <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to 'Sign Up', new_user_registration_path %>
+        <% end %>
+      </ul>
+    </nav>
     <%= yield %>
     <%= javascript_include_tag "application" %>
   </body>
