seed data from csv file using seed.rb, move patient_name and insurance_provider from procedure to encounter, update constraints and validations

--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -3,10 +3,10 @@
   <table>
     <thead>
       <tr>
-        <td>Patient Name</td>
-        <td>Insurance Provider</td>
-        <td>Procedure Description</td>
-        <td>Work RVU</td>
+        <th>Patient Name</th>
+        <th>Insurance Provider</th>
+        <th>Procedure Description</th>
+        <th>Work RVU</th>
       </tr>
     </thead>
     <tbody>
