persist physician_fee to encounter table

--- a/app/views/encounters/index.html.erb
+++ b/app/views/encounters/index.html.erb
@@ -16,7 +16,7 @@
         <td><%= encounter.procedure.description %></td>
         <td><%= encounter.procedure.code %></td>
         <td><%= encounter.procedure.work_rvu %></td>
-        <td>$<%= encounter.compensation %></td>
+        <td>$<%= encounter.set_physician_fee %></td>
       </tr>
     </tbody>
   </table>
