--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -35,10 +35,10 @@
         </ul>
       </li>
       <li class="has-dropdown">
-        <a href="/encounters">Reports</a>
+        <a href="/reports">Reports</a>
         <ul class="dropdown">
           <li><a href="/encounters/new">Practice</a></li>
-          <li><a href="/encounters/new">Productivity Report</a></li>
+          <li><a href="/reports/new">Productivity Report</a></li>
           <li><a href="/encounters/new">Advanced Report</a></li>
         </ul>
       </li>
