add fullcalendar/jquery plugin

--- a/app/views/encounters/index.html.erb
+++ b/app/views/encounters/index.html.erb
@@ -25,11 +25,8 @@
 <% end %>
 </div>
 
-
-
 <div>
   <%= button_to 'Create New', new_encounter_path %>
 </div>
-<div>
-  <%=
-</div>
+
+<div id='calendar'></div>
