--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create Report</h1>
 
 <%= simple_form_for :report, url: '/reports', method: 'post' do |f| %>
-  <%= f.input :start_date, label: 'Start Date' %>
-  <%= f.input :end_date, label: 'End Date' %>
+  <%= f.input :start_date, label: 'Start Date', input_html: {class: 'datepicker'} %>
+  <%= f.input :end_date, label: 'End Date', input_html: {class: 'datepicker'} %>
   <%= f.button :submit, 'Create Report' %>
 <% end %>
