fix current_user problem when building report

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,5 +1,7 @@
 <ul>
-  <% @report.encounters.each do |encounter| %>
+
+  <% @report.encounters.where(user: current_user).each do |encounter| %>
+
     <li><%= encounter.physician_fee %></li>
   <% end %>
 </ul>
