--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -52,7 +52,7 @@
             <li><a href="/encounters/new">Report Problem</a></li>
             <li><a href="/encounters/new">Help</a></li>
       <% else %>
-            <li><%= link_to 'Sign In', new_user_session_url %></li>
+            <li><%= link_to 'Log In', new_user_session_url %></li>
             <li><%= link_to 'Sign Up', new_user_registration_url %></li>
           </ul>
         </li>
