--- a/app/views/encounters/index.html.erb
+++ b/app/views/encounters/index.html.erb
@@ -3,7 +3,7 @@
   <%= button_to 'Create New', new_encounter_path, method: :get %>
   <% @encounters.each do |encounter| %>
   <% binding.pry %>
-  <%= button_to encounter.first, encounter, method: :get %>
+  <%= button_to encounter.first.readable_inspect, encounter, method: :get %>
   <% end %>
 </div>
 <br>
