--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,6 +1,6 @@
 <ul>
 
-  <% @report.encounters.where(user: current_user).each do |encounter| %>
+  <% @report.encounters.each do |encounter| %>
 
     <li><%= encounter.physician_fee %></li>
   <% end %>
