--- a/app/views/encounters/new.html.erb
+++ b/app/views/encounters/new.html.erb
@@ -2,5 +2,12 @@
 
 <%= render 'form' %>
 
-
-
+<% content_for :extra_footer do %>
+  <script>
+  $(function(){
+      $('.encounters').on('ajax:complete', function(event, response){
+          $(event.target).parent().fadeOut();
+        });
+      });
+  </script>
+<% end %>
