--- a/app/views/encounters/index.html.erb
+++ b/app/views/encounters/index.html.erb
@@ -2,6 +2,7 @@
 <div>
   <%= button_to 'Create New', new_encounter_path, method: :get %>
   <% @grouped_encounters.each do |encounter| %>
+  <% binding.pry %>
   <%= link_to encounter.first, encounters_path(date: encounter.first), method: :get, class: 'button tiny' %>
   <% end %>
 </div>
