--- a/app/views/encounters/create.js.erb
+++ b/app/views/encounters/create.js.erb
@@ -1,2 +1,2 @@
-$('.new_encounter').fadeOut();
-$('#encounters').prepend('<%= escape_javascript(render @encounter) %>')
+
+$('#encounters tbody').prepend('<%= escape_javascript(render @encounter) %>')
