--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,4 @@
+<br>
 <div>
   <table>
     <tbody>
@@ -12,3 +13,9 @@
     </tbody>
   </table>
 </div>
+
+<%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+
+<%= line_chart @report.encounters.joins(:procedure).group_by_day(:created_at).sum(:work_rvu) %>
+<%= pie_chart @report.encounters.joins(:procedure).group(:description).sum(:work_rvu) %>
+<%= column_chart @report.encounters.joins(:procedure).group(:code).sum(:work_rvu) %>
