--- a/app/views/encounters/index.html.erb
+++ b/app/views/encounters/index.html.erb
@@ -2,7 +2,7 @@
 <div>
   <%= button_to 'Create New', new_encounter_path, method: :get %>
   <% @grouped_encounters.each do |encounter| %>
-  <%= link_to encounter.first, schedule_path(date: encounter.first), method: :get, class: 'button tiny' %>
+  <%= link_to encounter.first, schedule_path(date: encounter.first), method: :get, class: 'button radius' %>
   <% end %>
 </div>
 <br>
