--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,35 @@
   </head>
 
   <body>
+    <nav class="top-bar">
+      <ul class="title-area">
+        <li class="name">
 
-    <%= yield %>
+        </li>
+      </ul>
+      <section class="top-bar-section">
+        <ul class="right">
+          <li class="divider"></li>
+
+          <li class="divider"></li>
+          <li><%= link_to "Price List" %></li>
+          <li class="divider"></li>
+          <li><%= link_to "Contact Us" %></li>
+          <li class="divider"></li>
+          <li><%= link_to "Cart" %></li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="row">
+      <!--"large" makes columns more responsive for mobile-->
+      <div class="large-8 columns"><%= yield %></div>
+      <div class="large-4 columns">
+        <h2 class="subheader">About Us</h2>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+
     <%= javascript_include_tag "application" %>
   </body>
 </html>
