--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,13 @@
-<h1>Welcome to DocSense</h1>
+<body class="unique"></body>
+<h1 class="white-title">DocSense</h1>
+<div class="row">
+  <div class="small-6 large-centered columns text-center">
+    <p>This is blank space</p>
+  </div>
+</div>
+<div id='container1' class='twentytwenty-container'>
+ <!-- The before image is first -->
+   <img src="/assets/stethoscope.jpg" />
+   <!-- The after image is last -->
+   <img src="/assets/healthtech.jpg" />
+</div>
