--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -36,7 +36,7 @@
 // $include-xl-html-grid-classes: false;
 
 // $row-width: rem-calc(1000);
-// $column-gutter: rem-calc(30);
+$column-gutter: rem-calc(100);
 // $total-columns: 12;
 
 // We use these to control various global styles
@@ -338,7 +338,7 @@ $primary-color: #51a351;
 // $button-font-align: center;
 
 // We use these to control various hover effects.
-// $button-function-factor: 5%;
+$button-function-factor: 10%;
 
 // We use these to control button border styles.
 // $button-border-width: 1px;
