--- a/app/views/encounters/index.html.erb
+++ b/app/views/encounters/index.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="large-12 columns">
 <br>
 <div>
   <%= button_to 'Create New', new_encounter_path, method: :get %>
@@ -8,3 +10,5 @@
 <br>
 
 <div id='calendar'></div>
+</div>
+</div>
