--- a/app/views/encounters/schedule.html.erb
+++ b/app/views/encounters/schedule.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+  <div class="large-12 columns">
+
 <br>
 <div>
   <table>
@@ -28,4 +31,6 @@
         </tr>
     </tbody>
   </table>
+</div>
+</div>
 </div>
