--- a/app/views/encounters/show.html.erb
+++ b/app/views/encounters/show.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="large-12 columns">
 <table>
   <tbody>
     <tr>
@@ -17,3 +19,5 @@
     </tr>
   </tbody>
 </table>
+</div>
+</div>
