--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,67 +1,69 @@
-<nav class="top-bar" data-topbar>
-  <ul class="title-area">
-    <li class="name">
-      <h1><a href="/">DocSense</a></h1>
-    </li>
-  </ul>
-
-  <section class="top-bar-section">
-    <ul class="left">
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="/encounters">Schedule</a>
-        <ul class="dropdown">
-          <li><a href="/encounters/new">Schedule</a></li>
-          <li><a href="/encounters/new">Calendar</a></li>
-          <li><a href="/encounters/new">Appointment</a></li>
-        </ul>
+<div class="fixed">
+  <nav class="top-bar" data-topbar>
+    <ul class="title-area">
+      <li class="name">
+        <h1><a href="/">DocSense</a></h1>
       </li>
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="/encounters">Clinical</a>
-        <ul class="dropdown">
-          <li><a href="/encounters/new">Clinical Notes</a></li>
-          <li><a href="/encounters/new">CMS Rules</a></li>
-          <li><a href="/encounters/new">Audit Log</a></li>
-        </ul>
-      </li>
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="/encounters">Patients</a>
-        <ul class="dropdown">
-          <li><a href="/encounters/new">Patient</a></li>
-          <li><a href="/encounters/new">Patient List</a></li>
-          <li><a href="/encounters/new">Analytics</a></li>
-        </ul>
-      </li>
-      <li class="divider"></li>
-      <li class="has-dropdown">
-        <a href="/reports">Reports</a>
-        <ul class="dropdown">
-          <li><a href="/encounters/new">Practice</a></li>
-          <li><a href="/reports/new">Productivity Report</a></li>
-          <li><a href="/encounters/new">Advanced Report</a></li>
-        </ul>
-      </li>
-      <li class="divider"></li>
     </ul>
-    <ul class="right">
-      <% if user_signed_in? %>
-        <li class="account">
+
+    <section class="top-bar-section">
+      <ul class="left">
         <li class="divider"></li>
         <li class="has-dropdown">
-          <a href="/encounters">Account</a>
+          <a href="/encounters">Schedule</a>
           <ul class="dropdown">
-            <li><%= link_to "Log Out", destroy_user_session_url, method: :delete %></li>
-            <li><a href="/encounters/new">Report Problem</a></li>
-            <li><a href="/encounters/new">Help</a></li>
-      <% else %>
-            <li><%= link_to 'Log In', new_user_session_url %></li>
-            <li><%= link_to 'Sign Up', new_user_registration_url %></li>
+            <li><a href="/encounters/new">Schedule</a></li>
+            <li><a href="/encounters/new">Calendar</a></li>
+            <li><a href="/encounters/new">Appointment</a></li>
           </ul>
         </li>
+        <li class="divider"></li>
+        <li class="has-dropdown">
+          <a href="/encounters">Clinical</a>
+          <ul class="dropdown">
+            <li><a href="/encounters/new">Clinical Notes</a></li>
+            <li><a href="/encounters/new">CMS Rules</a></li>
+            <li><a href="/encounters/new">Audit Log</a></li>
+          </ul>
         </li>
-      <% end %>
-    </ul>
-  </section>
-</nav>
+        <li class="divider"></li>
+        <li class="has-dropdown">
+          <a href="/encounters">Patients</a>
+          <ul class="dropdown">
+            <li><a href="/encounters/new">Patient</a></li>
+            <li><a href="/encounters/new">Patient List</a></li>
+            <li><a href="/encounters/new">Analytics</a></li>
+          </ul>
+        </li>
+        <li class="divider"></li>
+        <li class="has-dropdown">
+          <a href="/reports">Reports</a>
+          <ul class="dropdown">
+            <li><a href="/encounters/new">Practice</a></li>
+            <li><a href="/reports/new">Productivity Report</a></li>
+            <li><a href="/encounters/new">Advanced Report</a></li>
+          </ul>
+        </li>
+        <li class="divider"></li>
+      </ul>
+      <ul class="right">
+        <% if user_signed_in? %>
+          <li class="account">
+
+          <li class="has-dropdown">
+            <a href="/encounters" class="small orange button nice radius">Account</a>
+            <ul class="dropdown">
+              <li><%= link_to "Log Out", destroy_user_session_url, method: :delete %></li>
+              <li><a href="/encounters/new">Report Problem</a></li>
+              <li><a href="/encounters/new">Help</a></li>
+        <% else %>
+              <li><%= link_to 'Log In', new_user_session_url %></li>
+              <li><%= link_to 'Sign Up', new_user_registration_url %></li>
+            </ul>
+          </li>
+          </li>
+        <% end %>
+      </ul>
+    </section>
+  </nav>
+</div>
