--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,16 @@
     <%= render 'layouts/messages' %>
     <%= render 'layouts/navbar' %>
 
-    <div class="row">
-      <div class="large-12 columns">
-        <%= yield %>
-      </div>
-    </div>
 
+
+
+
+ <!--    <div class="row">
+      <div class="large-12 columns"> -->
+        <%= yield %>
+ <!--      </div>
+    </div>
+ -->
     <%= javascript_include_tag "application" %>
     <%= yield :extra_footer %>
   </body>
