--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
         <%= f.text_field :last_name, placeholder: 'Last Name', required: true %>
       </div>
       <div class="small-12 medium-4 columns">
-        <%= f.input :username, label: 'Username', required: true, autofocus: true %>
+        <%= f.text_field :username, placeholder: 'Username', required: true, autofocus: true %>
       </div>
     </div>
 
