--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -5,7 +5,7 @@
     <div class="banner">
       <ul class="small-block-grid-3 banner-footer">
         <li>
-          <h3>Free 2 Week Trial Today</h3>
+          <h3>Free 2-week Trial</h3>
           <p>Use DocSense for mobile devices in your practice today. <%= link_to 'Sign Up', new_user_registration_url %><p>
         </li>
         <li>
