update for heroku

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,5 +1,5 @@
 <div class="container-full">
-  <img class="container-full healthtech-background" src="/assets/healthtech.jpg">
+  <img class="container-full healthtech-background" src=<%="/assets/healthtech.jpg"%>>
   <div class="banner-row">
 
     <div class="banner">
