--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,12 +20,12 @@
 
 
 
- <!--    <div class="row">
-      <div class="large-12 columns"> -->
+    <div class="row">
+      <div class="large-12 columns">
         <%= yield %>
- <!--      </div>
+      </div>
     </div>
- -->
+
     <%= javascript_include_tag "application" %>
     <%= yield :extra_footer %>
   </body>
