--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,3 +1,7 @@
+<div class="row">
+  <div class="large-12 columns">
+
+
   <%- if controller_name != 'sessions' %>
     <%= link_to "Sign in", new_session_path(resource_name) %><br />
   <% end -%>
@@ -33,3 +37,6 @@
 
   <% end -%>
 <% end -%>
+
+</div>
+</div>
