--- a/app/views/encounters/new.html.erb
+++ b/app/views/encounters/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="large-12 columns"
+  <div class="large-12 columns">
 <h1>Add new encounter</h1>
 
 <%= render 'form' %>
