--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+  <div class="large-12 columns">
+
 <h2>Sign Up</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -45,4 +48,9 @@
   </div>
 <% end %>
 
+</div>
+</div>
+
 <%= render "devise/shared/links" %>
+
+
