--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,3 +1,6 @@
+<div class="row">
+  <div class="large-12 columns">
+
 <div class="fixed">
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
@@ -57,8 +60,8 @@
               <li><a href="/encounters/new">Report Problem</a></li>
               <li><a href="/encounters/new">Help</a></li>
         <% else %>
-              <%= link_to 'Log In', new_user_session_url %></li>
-              <%= link_to 'Sign Up', new_user_registration_url %></li>
+              <li><%= link_to 'Log In', new_user_session_url %></li>
+              <li><%= link_to 'Sign Up', new_user_registration_url %></li>
             </ul>
           </li>
           </li>
@@ -66,4 +69,7 @@
       </ul>
     </section>
   </nav>
+</div>
+
+</div>
 </div>
