--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,29 @@
+<div class="row">
+  <div class="large-12 columns">
+
 <h2>Forgot your password?</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
+  <div class="row">
+    <div class="small-6 columns">
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :login, required: true %>
   </div>
+</div>
+</div>
 
+  <div class="row">
+    <div class="small-6 columns">
   <div class="form-actions">
     <%= f.button :submit, "Send me reset password instructions" %>
   </div>
 <% end %>
+</div>
+</div>
+</div>
+</div>
 
 <%= render "devise/shared/links" %>
