--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,12 +1,15 @@
 <div class="row">
   <div class="large-12 columns">
 
-
+    <div class="row">
+      <div class="small-6 columns">
   <%- if controller_name != 'sessions' %>
     <%= link_to "Sign in", new_session_path(resource_name) %><br />
+  </div>
+</div>
   <% end -%>
 
-<div class="large-12 columns">
+
   <div class="row">
     <div class="small-6 columns">
       <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
@@ -15,12 +18,12 @@
   </div>
   <% end -%>
   <div class="row">
-    <div class="small-6 columns">
+    <div class="small-12 columns">
       <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
         <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
     </div>
   </div>
-</div>
+
   <% end -%>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
@@ -40,3 +43,4 @@
 
 </div>
 </div>
+
