unfinished calendar design

--- a/app/assets/stylesheets/layouts.css
+++ b/app/assets/stylesheets/layouts.css
@@ -52,3 +52,12 @@ li.left {
   padding: 0 7px;
 }
 
+/*#calendar {
+  float: right;
+  width: 600px;
+}
+
+a.group.button.tiny {
+  float: left;
+  margin: 25px 0px 25px;
+}*/
