update padding of banner-homepage

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -14,7 +14,7 @@
       </li>
       <li>
         <h3>HIPAA Compliant</h3>
-        <p>We handle all of the technical requirements mandated by the HIPAA Security Rule.</p>
+        <p>We handle all technical requirements mandated by the HIPAA Security Rule.</p>
       </li>
     </ul>
   </div>
