--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,19 +9,19 @@
   <div class="form-inputs">
     <div class="row collapse">
       <div class="small-12 medium-4 columns">
-        <%= f.text_field :first_name, placeholder: 'First Name', required: true %>
+        <%= f.text_field :first_name, placeholder: 'First Name', required: true, autofocus: true %>
       </div>
       <div class="small-12 medium-4 columns">
         <%= f.text_field :last_name, placeholder: 'Last Name', required: true %>
       </div>
       <div class="small-12 medium-4 columns">
-        <%= f.text_field :username, placeholder: 'Username', required: true, autofocus: true %>
+        <%= f.text_field :username, placeholder: 'Username', required: true %>
       </div>
     </div>
 
     <div class="row collapse">
       <div class="small-12 medium-4 columns">
-        <%= f.text_field :email, placeholder: 'Email Address', required: true, autofocus: true %>
+        <%= f.text_field :email, placeholder: 'Email Address', required: true %>
       </div>
       <div class="small-12 medium-4 columns">
         <%= f.text_field :dollar_per_rvu, placeholder: 'RVU Dollar Amount', required: true %>
