--- a/app/views/encounters/new.html.erb
+++ b/app/views/encounters/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-12 columns">
-<h1>Add new encounter</h1>
+<h2>Manage your new or existing patients</h2>
 
 <%= render 'form' %>
 
