--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="large-12 columns">
     <div>
-      <table>
+      <table class="report">
         <tbody>
           <tr>
             <th>Total Work RVUs</th>
