--- a/app/views/encounters/show.html.erb
+++ b/app/views/encounters/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-12 columns">
-<table>
+<table class="report">
   <tbody>
     <tr>
       <th scope="rowgroup" colspan="4"><%= @encounter.patient_name %></th>
