--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="large-12 columns">
-    <h1>Create Report</h1>
+    <h2>Select dates for new report</h2>
     <%= simple_form_for :report, url: '/reports', method: 'post' do |f| %>
     <div class="row">
       <div class="small-6 columns">
