various past commits

--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -1,10 +1,10 @@
-.unique {
+/*.unique {
   background: url('/assets/healthtech.jpg') no-repeat center center fixed;
   -moz-background-size: cover;
   -webkit-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+}*/
 
 .banner-footer li h3 {
 
