--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -33,10 +33,10 @@
 
     <div class="row collapse">
       <div class="small-12 medium-6 columns">
-        <%= f.text_field :password, placeholder: 'Password', required: true %>
+        <%= f.input :password, placeholder: 'Password', required: true, label: false %>
       </div>
       <div class="small-12 medium-6 columns">
-        <%= f.text_field :password_confirmation, placeholder: 'Password confirmation', required: true %>
+        <%= f.input :password_confirmation, placeholder: 'Password confirmation', required: true, label: false %>
       </div>
     </div>
 
